# tractor-telemetry-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: can.h  sensors.h  state_machine.h
src/: main.cpp
tests/: test_fsm.cpp
